클라이언트 API 수정